# CS6290-Group-8-Project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
agent_client/: L2_ADAPTATION.md  README.md
agent_client/design document/: Module interaction process.md  module_interaction_design.json
agent_client/src/: agent_requirements.txt
agent_client/tests/: run_l2_checks.py
archive/legacy-datasets/: adv_100_cases.json  final_attack_dataset_v1.json
artifacts/: results_bare_adv_100_cases.json  results_l1_adv_100_cases.json  three_config_comparison_adv_100_cases.json
artifacts/final_results/: comparison_summary.json  comparison_table.csv  results_bare_final_attack_dataset.json  results_bare_final_attack_dataset_v2.json  results_l1_final_attack_dataset.json  results_l1_final_attack_dataset_v2.json  results_l1l2_final_attack_dataset.json  results_l1l2_final_attack_dataset_v2.json  results_l1l2l3_final_attack_dataset.json  results_l1l2l3_final_attack_dataset_v2.json  statistics.json  validation_report.json
contracts/: README.md
contracts/cache/: solidity-files-cache.json
docs/: Role-and-Deliverables.md  RoleD-worklog.md  THREAT_MODEL.md  decision-log.md  specification.md  task-list-llm.md  timeline.md  toArchitecture_SpecOwer.md
docs_wren/: M2-Individual-Evidence-Pack.md  RoleD-worklog.md
exchange-speckit-start/: DEVELOPER_GUIDE.md  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml  pytest.ini
exchange-speckit-start/config/: default_policy.yaml  threat_rules.yaml
exchange-speckit-start/specs/001-swap-plan/: PLANNING_COMPLETE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
exchange-speckit-start/specs/001-swap-plan/checklists/: requirements.md
exchange-speckit-start/specs/001-swap-plan/contracts/: cli-interface.md
exchange-speckit-start/src/: __init__.py  main.py
exchange-speckit-start/src/config/: __init__.py
exchange-speckit-start/src/logging/: __init__.py  audit_logger.py  threat_reporter.py
exchange-speckit-start/src/market/: __init__.py  eth_rpc.py  oracle.py
exchange-speckit-start/src/models/: __init__.py  adversarial_threat.py  custody_proof.py  swap_quote.py  transaction_plan.py  validation_gate.py
exchange-speckit-start/src/validation/: __init__.py  custody_validators.py  quote_validator.py  threat_catalog.py  threat_filters.py
exchange-speckit-start/tests/: conftest.py
exchange-speckit-start/tests/contract/: test_models.py
harness/: __init__.py  agent_clients.py  agent_clients_new.py  artifacts.py  metrics.py  runner.py
policy_engine/: config.py  engine.py  l3_validator.py  rules.py
report-beamer/: main.aux  main.nav  main.out  main.snm  main.tex  main.toc  references.bib
report-latex/: CS6290-project-template.tex  references.bib
scripts/: README.md  check_policy_parity.py  generate_testcases.py  replay_integration_test.py  run_integration_test.py  run_real_tools_benchmark.py  run_real_tools_smoke.py  run_smoke_harness.py  run_smoke_harness_new.py  start-chain.sh  start_agent.sh  start_bot.sh  start_both.sh  verify_system_prompt.py
telegram_bot/: __init__.py  bot.py  config.py  formatter.py  main.py
testcases/: README_DATASET.md  README_FINAL_DATASET.md  adv_100_cases.json  cases_2026-03-04.json  final_attack_dataset.json  milestone1_cases.json  real_tools_smoke_cases.json
tests/: test_artifacts.py  test_control_plane_auth.py  test_defense_config.py  test_l1_guardrails.py  test_l3_validator.py  test_no_duplicate_guardrails.py  test_old_llm_planner.py  test_output_guardrail.py  test_policy_engine.py  test_policy_parity_script.py  test_run_integration_statistics.py  test_smoke_harness.py  test_system_prompt_integrity.py  test_telegram_bot.py  test_tool_coordinator.py  test_wallet_bridge.py
(+44 files in other folders)
