[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swap-planning-agent"
version = "0.1.0"
description = "Secure cryptocurrency swap planning agent with layered security guardrails"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Exchange Security Team", email = "security@exchange.local"}
]

dependencies = [
    "anthropic>=0.7.0",           # Claude SDK for LLM agent
    "web3.py>=6.0.0",             # Ethereum RPC client
    "pydantic>=2.0.0",            # Data validation
    "eth-keys>=0.4.0",            # NIST secp256k1 cryptography
    "python-json-logger>=2.0.0",  # Structured JSON logging
    "aiohttp>=3.8.0",             # Async HTTP for concurrent lookups
    "Decimal>=0.0.1",             # Precise decimal arithmetic (via decimal module)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",              # Testing framework
    "pytest-asyncio>=0.21.0",     # Async test support
    "pytest-cov>=4.0.0",          # Coverage reporting
    "hypothesis>=6.70.0",         # Property-based testing
    "black>=23.0.0",              # Code formatter
    "flake8>=6.0.0",              # Linter
    "mypy>=1.0.0",                # Type checker
    "bandit>=1.7.0",              # Security linter
    "safety>=2.0.0",              # Dependency vulnerability scanner
]

[project.urls]
Homepage = "https://github.com/exchange/swap-planning-agent"
Repository = "https://github.com/exchange/swap-planning-agent.git"
Issues = "https://github.com/exchange/swap-planning-agent/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests for individual components",
    "contract: Contract tests for I/O specifications",
    "integration: Integration tests for workflows",
    "performance: Performance benchmarks",
    "determinism: Determinism verification tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
